# GPUtray

./: CMakeLists.txt  README.md  build.bat  screenshot02.png~
include/: GpuMonitor.h  GraphPopup.h  TrayIcon.h
src/: GpuMonitor.cpp  GpuTray.manifest  GraphPopup.cpp  TrayIcon.cpp  main.cpp  resources.rc
